--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,34 +2,48 @@ apply plugin: 'com.android.application'
 apply plugin: 'org.greenrobot.greendao'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 31
+    buildToolsVersion "31.0.0"
 
     defaultConfig {
         applicationId "com.hensen.greendaodemo"
-        minSdkVersion 16
-        targetSdkVersion 24
+        minSdkVersion 21
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
-    }
-    //greendao配置
-    greendao {
-        //版本号，升级时可配置
-        schemaVersion 1
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        //greendao配置
+//        greendao {
+//            //版本号，升级时可配置
+//            schemaVersion 1
+//        }
+        buildTypes {
+            release {
+                minifyEnabled false
+                proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            }
         }
     }
-}
+    greendao {
+        schemaVersion 2
+        daoPackage 'com.hensen.greendaodemo'
+        targetGenDir 'src/main/java'
+    }
 
-dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    //ORM数据库
-    compile 'org.greenrobot:greendao:3.2.0'
-    compile files('libs/xUtils-2.6.14.jar')
+    dependencies {
+        implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+        implementation 'androidx.appcompat:appcompat:1.0.2'
+        implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+        //ORM数据库
+        implementation 'org.greenrobot:greendao:3.2.2'
+        implementation 'org.greenrobot:greendao-generator:3.3.0'
+        //implementation 'io.github.yuweiguocn:GreenDaoUpgradeHelper:v2.2.1'
+
+        implementation files('libs/xUtils-2.6.14.jar')
+
+        testImplementation 'junit:junit:4.12'
+        androidTestImplementation 'androidx.test:runner:1.1.1'
+        androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    }
 }
